alpha working calendar range selector with time calculation

--- a/client/client.jade
+++ b/client/client.jade
@@ -29,7 +29,7 @@ template(name='layout')
                     +yield
         unless is_frontdesk
             +footer
-        +shortcut_modal
+        //- +shortcut_modal
 
 template(name='mlayout')
     .global_container(class=invert_class)
