--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -27,11 +27,6 @@ template(name='staff')
                     //- i.large.tablet.icon
                     +i name='android-tablet' classes='ui mini inline image'
                     | kiosk view
-    
-                //- +add_button model='work_order' label='work order'
-                //- +add_button model='communication' label='communication'
-                //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-                //- +add_button model='shift_checklist' label='shift checklist'
                 +unit_key_widget
                 a.ui.compact.fluid.large.button(href='readings')
                     +ismall name='water' classes='ui inline image' 
@@ -89,6 +84,7 @@ template(name='staff')
                         |checklist not completed
 
             .twelve.wide.column
+                //- +schedule
                 .ui.inline.grey.header #{checkedin_members.count} checked in members
                 .ui.stackable.four.cards
                     each sessions
