--- a/components/rentals/reservation_edit.jade
+++ b/components/rentals/reservation_edit.jade
@@ -11,7 +11,7 @@ template(name='reservation_edit')
                         strong #{rental.title}
                         small reservation
                     with rental
-                        +image_view key='image' label='image' direct=true
+                        +image_view key='image' label='image' direct=true classes='ui rounded image'
                         +number_view key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
                         +number_view key='daily_dollars' label='daily rate ($)' icon='money' direct=true
                         //- +number_view key='hourly_karma' label='hourly rate (karma)' icon='yin-yang' direct=true
@@ -40,54 +40,55 @@ template(name='reservation_edit')
                 
                 .column 
                     //- a.ui.header(href="/rental/#{rental._id}/view") reserve #{rental.title}
-                    .ui.fluid.button.reserve_now(class=now_button_class)
-                        +i name='present'
-                        |reserve now
-                    unless now
-                        +date_edit key='start_date' label='start date' icon='date-from' direct=true
-                        +time_edit key='start_time' label='start time' icon='date-to' direct=true
-                        +datetime_edit key='start_datetime' label='start datetime' direct=true
-                    .ui.header 
-                        +i name='date-to' classes='ui tiny inline image'
-                        |duration
+                    //- .ui.fluid.button.reserve_now(class=now_button_class)
+                    //-     +i name='present'
+                    //-     |reserve now
+                    //- unless now
+                    //-     +date_edit key='start_date' label='start date' icon='date-from' direct=true
+                    //-     +time_edit key='start_time' label='start time' icon='date-to' direct=true
+                    +datetime_edit key='start_datetime' label='start datetime' direct=true
+                    //- .ui.header 
+                    //-     +i name='date-to' classes='ui tiny inline image'
+                    //-     |duration
+                    +range_edit key='reservation_range' label='range' direct=true
                     //- +boolean_edit key='daily_reservation' label='daily' icon='sun' direct=true
-                    .ui.compact.button.select_month(class=sel_month_class)
-                        +i name='calendar'
-                        |month
-                    .ui.compact.button.select_day(class=sel_day_class)
-                        +i name='sun'
-                        |day
-                    .ui.compact.button.select_hour(class=sel_hr_class)
-                        +i name='clock'
-                        |hour
+                    //- .ui.compact.button.select_month(class=sel_month_class)
+                    //-     +i name='calendar'
+                    //-     |month
+                    //- .ui.compact.button.select_day(class=sel_day_class)
+                    //-     +i name='sun'
+                    //-     |day
+                    //- .ui.compact.button.select_hour(class=sel_hr_class)
+                    //-     +i name='clock'
+                    //-     |hour
                     div
-                    if is_hour
-                        +number_view key='hourly_dollars' label='hourly rate ($)'
-                        //- +number_view key='hourly_karma' label='hourly rate (karma)'
-                        .ui.button.set_1_hr 1 hr
-                        //- +key_value_edit key='hour_duration' value=.5 label='1/2'
-                        //- +key_value_edit key='hour_duration' value=1 label='1 hr'
-                        //- +key_value_edit key='hour_duration' value=2 label='2 hrs'
-                        //- +key_value_edit key='hour_duration' value=3 label='3 hrs'
-                        //- +number_edit key='hour_duration' label='other' direct=true
-                    if is_day 
-                        +number_view key='daily_dollars' label='daily rate ($)'
-                        //- +number_view key='daily_karma' label='daily rate (karma)'
-                        +key_value_edit key='day_duration' value=1 label='1 day'
-                        +key_value_edit key='day_duration' value=2 label='2 days'
-                        +key_value_edit key='day_duration' value=3 label='3 days'
-                        +key_value_edit key='day_duration' value=3 label='other'
-                        +number_edit key='day_duration' label='other' direct=true
-                    if is_month
-                        +number_view key='monthly_dollars' label='monthly rate ($)'
-                        //- +number_view key='monthly_karma' label='monthly rate (karma)'
-                        +key_value_edit key='month_duration' value=1 label='1 month'
-                        +key_value_edit key='month_duration' value=2 label='2 months'
-                        +key_value_edit key='month_duration' value=3 label='3 months'
-                        +key_value_edit key='month_duration' value=3 label='other'
-                        +number_edit key='month_duration' label='other' direct=true
-                    +date_edit key='end_date' label='end date' icon='date-to' direct=true
-                    +time_edit key='end_time' label='end time' icon='time' direct=true
+                    //- if is_hour
+                    //- +number_view key='hourly_dollars' label='hourly rate ($)'
+                    //- +number_view key='hourly_karma' label='hourly rate (karma)'
+                    //- .ui.button.set_1_hr 1 hr
+                    //- +key_value_edit key='hour_duration' value=.5 label='1/2'
+                    //- +key_value_edit key='hour_duration' value=1 label='1 hr'
+                    //- +key_value_edit key='hour_duration' value=2 label='2 hrs'
+                    //- +key_value_edit key='hour_duration' value=3 label='3 hrs'
+                    //- +number_edit key='hour_duration' label='other' direct=true
+                    //- if is_day 
+                    //-     +number_view key='daily_dollars' label='daily rate ($)'
+                    //-     //- +number_view key='daily_karma' label='daily rate (karma)'
+                    //-     +key_value_edit key='day_duration' value=1 label='1 day'
+                    //-     +key_value_edit key='day_duration' value=2 label='2 days'
+                    //-     +key_value_edit key='day_duration' value=3 label='3 days'
+                    //-     +key_value_edit key='day_duration' value=3 label='other'
+                    //-     +number_edit key='day_duration' label='other' direct=true
+                    //- if is_month
+                    //-     +number_view key='monthly_dollars' label='monthly rate ($)'
+                    //-     //- +number_view key='monthly_karma' label='monthly rate (karma)'
+                    //-     +key_value_edit key='month_duration' value=1 label='1 month'
+                    //-     +key_value_edit key='month_duration' value=2 label='2 months'
+                    //-     +key_value_edit key='month_duration' value=3 label='3 months'
+                    //-     +key_value_edit key='month_duration' value=3 label='other'
+                    //-     +number_edit key='month_duration' label='other' direct=true
+                    //- +date_edit key='end_date' label='end date' icon='date-to' direct=true
+                    //- +time_edit key='end_time' label='end time' icon='time' direct=true
                     +datetime_edit key='end_datetime' label='end datetime' direct=true
             
                     //- +key_value_edit key='minute_duration' value=30 label='1/2'
@@ -96,10 +97,11 @@ template(name='reservation_edit')
                     //- +key_value_edit key='minute_duration' value=180 label='3 hrs'
                     //- +number_edit key='minute_duration' label='minute duration' direct=true
                 .column
-                    +date_view key='start_date' label='start date' icon='date-from' direct=true
-                    +time_view key='start_time' label='start time' icon='time' direct=true
-                    +date_view key='end_date' label='end date' icon='date-to' direct=true
-                    +time_view key='end_time' label='end time' icon='time' direct=true
+                    .ui.header.lowercase from {{cal_time start_datetime}}
+                    .ui.header.lowercase to {{cal_time end_datetime}}
+                    +datetime_view key='start_datetime' label='start date' icon='date-from' direct=true
+                    +datetime_view key='end_datetime' label='end date' icon='date-to' direct=true
+                    .ui.header diff #{diff} hours
                     .ui.header 
                         +i name='money' classes='ui tiny inline image'
                         |estimated dollars #{hour_duration}*#{rental.hourly_dollars} = $#{estimated_dollars}
